--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    font-family: Arial;
+}
+
+.hoverableElement:hover {
+    background-color: #e8e8e8;
+}
